Se agrega schedule y actualizacion asi como UI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+#formato de fecha
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+#cron de que actualiza el campo de procesado de cada persona
+spring.blacksip.cron.procesarPersona = 0 * * * * *
