--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 #cron de que actualiza el campo de procesado de cada persona
 spring.blacksip.cron.procesarPersona = 0 * * * * *
+
+spring.application.index=1
